--- a/src/app/poc/poc.component.scss
+++ b/src/app/poc/poc.component.scss
@@ -1,22 +1,22 @@
-@import "../../mixin.scss";
-@import "../../veriable.scss";
-.proof {
-  padding: 3rem 5rem 5rem;
-  background-color: $backgroundcolor;
-  .head {
-    @include head;
-  }
-  .body_layout {
-    padding-top: 6rem;
-    h4 {
-      font-style: italic;
-      font-size: 1.2rem;
-      font-weight: 400;
-      text-align: center;
-      color: $white-text-color;
-    }
-    ul {
-      @include list;
-    }
-  }
-}
+// @import "../../mixin.scss";
+// @import "../../veriable.scss";
+// .proof {
+//   padding: 3rem 5rem 5rem;
+//   background-color: $primary-background-color;
+//   .head {
+//     @include head;
+//   }
+//   .body_layout {
+//     padding-top: 6rem;
+//     h4 {
+//       font-style: italic;
+//       font-size: 1.2rem;
+//       font-weight: 400;
+//       text-align: center;
+//       color: $primary-color-white;
+//     }
+//     ul {
+//       @include list;
+//     }
+//   }
+// }
