--- a/src/app/poc/poc.component.scss
+++ b/src/app/poc/poc.component.scss
@@ -1,22 +1,75 @@
-// @import "../../mixin.scss";
-// @import "../../veriable.scss";
-// .proof {
-//   padding: 3rem 5rem 5rem;
-//   background-color: $primary-background-color;
-//   .head {
-//     @include head;
-//   }
-//   .body_layout {
-//     padding-top: 6rem;
-//     h4 {
-//       font-style: italic;
-//       font-size: 1.2rem;
-//       font-weight: 400;
-//       text-align: center;
-//       color: $primary-color-white;
-//     }
-//     ul {
-//       @include list;
-//     }
-//   }
-// }
+@import "../../mixin.scss";
+@import "../../veriable.scss";
+.proof {
+  padding: 3rem 5rem 5rem;
+  background-color: #fff;
+  .head {
+    padding-bottom: 2rem;
+    h1 {
+      font-family: "Poppins", sans-serif;
+      margin-top: 0;
+      margin-bottom: 0;
+      font-weight: 400;
+      color: $primary-background-color;
+      letter-spacing: 0;
+      text-align: center;
+    }
+  }
+  .body_layout {
+    padding-top: 1rem;
+    padding-left: 2rem;
+    h4 {
+      font-style: italic;
+      font-size: 1.2rem;
+      font-weight: 400;
+      text-align: center;
+      color: $primary-background-color;
+    }
+    ul {
+      padding-left: 2rem;
+      li {
+        font-size: 0.9rem;
+        line-height: 1.5rem;
+        text-align: start;
+      }
+    }
+  }
+}
+@media screen and (max-width: 500px) {
+  .proof {
+    padding: 3rem 0rem 5rem;
+    background-color: #fff;
+    .head {
+      padding-bottom: 2rem;
+      h1 {
+        font-family: "Poppins", sans-serif;
+        margin-top: 0;
+        margin-bottom: 0;
+        font-weight: 400;
+        color: $primary-background-color;
+        letter-spacing: 0;
+        text-align: center;
+      }
+    }
+    .body_layout {
+      padding-top: 1rem;
+      padding-left: 2rem;
+      h4 {
+        font-style: italic;
+        font-size: 1rem;
+        font-weight: 400;
+        text-align: start;
+        color: $primary-background-color;
+        padding-top: 1rem;
+      }
+      ul {
+        padding-left: 0;
+        li {
+          font-size: 0.9rem;
+          line-height: 1.5rem;
+          text-align: start;
+        }
+      }
+    }
+  }
+}
